--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,2 +1,62 @@
 .App {
+  min-height: 100%;
+  width: 100%;
+  /* color: white; */
+}
+
+.navbar {
+  position: fixed;
+  width: 100%;
+  z-index: 1;
+  background-color: rgba(24, 24, 24, 0.5);
+  height: 100px;
+  color: white;
+}
+
+.navbar-light .navbar-nav .nav-link, .nav-link {
+  color: rgb(255 255 255);
+}
+
+.navbar-light .navbar-brand {
+  color: white;
+  font-family: 'Dancing Script', cursive;
+
+}
+
+.navbar-light .navbar-brand:focus, .nav-link:focus {
+  color: rgba(255, 255, 255, 0.9);
+}
+
+.navbar, .navbar-light .navbar-brand:hover, .nav-link:hover  {
+  color: #70acb3;
+}
+
+.navbar-logo{
+  float: left;
+}
+
+.navbar-link-text{
+  margin-top: 22px;
+  margin-left: 100px;
+}
+
+.navbar-light .navbar-toggler {
+  color: rgb(250 250 250 / 50%);
+  border-color: rgb(253 253 253);
+}
+
+.navbar-light .navbar-toggler-icon {
+  background-image: url('./images/josp-logo.png');
+}
+
+#login, #signup {
+  background-color: #70acb3;
+  border-radius: 5px;
+  width: 83px;
+  text-align: center;
+  margin: 0px 10px;
+}
+
+.navbar-light .navbar-nav .nav-link:hover {
+  color: #70acb3;
 }
