--- a/client/src/containers/Home.css
+++ b/client/src/containers/Home.css
@@ -7,3 +7,205 @@
   font-family: "Open Sans", sans-serif;
   font-weight: 600;
 }
+
+ul, li {
+  list-style: none;
+}
+
+.cb-slideshow, .cb-slideshow:after {
+  /* position: fixed; */
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  left: 0px;
+  z-index: 0;
+}
+
+.cb-slideshow:after {
+  content: '';
+  background: transparent url('../images/josp-photography-1.jpeg') repeat top left;
+}
+
+.cb-slideshow li span {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  color: transparent;
+  background-size: cover;
+  background-position: 50% 50%;
+  background-repeat: none;
+  opacity: 0;
+  z-index: 0;
+  animation: imageAnimation 36s linear infinite 0s;
+}
+
+.cb-slideshow li div {
+  z-index: 1000;
+  position: absolute;
+  bottom: 30px;
+  left: 15%;
+  width: auto;
+  text-align: center;
+  opacity: 0;
+  color: #fff;
+  background-color: #70acb3a1;
+  border-bottom-left-radius: 132px;
+  border-top-right-radius: 132px;
+  animation: titleAnimation 36s linear infinite 0s;
+}
+
+.cb-slideshow li div h3 {
+  /* font-family: 'BebasNeueRegular', 'Arial Narrow', Arial, sans-serif; */
+  font-size: 100px;
+  /* padding: 10%; */
+  /* line-height: 200px; */
+  padding: 50px;
+}
+
+.cb-slideshow li:nth-child(1) span {
+  background-image: url('../images/josp-photography-2.jpeg')
+}
+
+.cb-slideshow li:nth-child(2) span {
+  background-image: url('../images/josp-photography-3.jpeg');
+  animation-delay: 6s;
+}
+
+.cb-slideshow li:nth-child(3) span {
+  background-image: url('../images/josp-photography-4.jpeg');
+  animation-delay: 12s;
+}
+
+.cb-slideshow li:nth-child(4) span {
+  background-image: url('../images/josp-photography-5.jpeg');
+  animation-delay: 18s;
+}
+
+.cb-slideshow li:nth-child(5) span {
+  background-image: url('../images/josp-photography-6.jpeg');
+  animation-delay: 24s;
+}
+
+/* .cb-slideshow li:nth-child(6) span { 
+  background-image: url('../images/josp-photography-4.jpeg');
+  animation-delay: 30s; 
+} */
+
+.cb-slideshow li:nth-child(2) div {
+  animation-delay: 6s;
+}
+
+.cb-slideshow li:nth-child(3) div {
+  animation-delay: 12s;
+}
+
+.cb-slideshow li:nth-child(4) div {
+  animation-delay: 18s;
+}
+
+.cb-slideshow li:nth-child(5) div {
+  animation-delay: 24s;
+}
+
+/* .cb-slideshow li:nth-child(6) div { 
+  animation-delay: 30s;  */
+
+/* } */
+
+@keyframes imageAnimation {
+  0% {
+    opacity: 0;
+    animation-timing-function: ease-in;
+  }
+  8% {
+    opacity: 1;
+    animation-timing-function: ease-out;
+  }
+  17% {
+    opacity: 1
+  }
+  25% {
+    opacity: 0
+  }
+  100% {
+    opacity: 0
+  }
+}
+
+@keyframes titleAnimation {
+  0% {
+    opacity: 0
+  }
+  8% {
+    opacity: 1
+  }
+  17% {
+    opacity: 1
+  }
+  19% {
+    opacity: 0
+  }
+  100% {
+    opacity: 0
+  }
+}
+
+.no-cssanimations .cb-slideshow li span {
+  opacity: 1;
+}
+
+@keyframes imageAnimation {
+  0% {
+    opacity: 0;
+    animation-timing-function: ease-in;
+  }
+  8% {
+    opacity: 1;
+    transform: scale(1.05);
+    animation-timing-function: ease-out;
+  }
+  17% {
+    opacity: 1;
+    transform: scale(1.1) rotate(3deg);
+  }
+  25% {
+    opacity: 0;
+    transform: scale(1.1) rotate(3deg);
+  }
+  100% {
+    opacity: 0
+  }
+}
+
+@keyframes titleAnimation {
+  0% {
+    opacity: 0;
+    transform: translateX(200px);
+    /* width: 0; */
+  }
+  8% {
+    opacity: 1;
+    transform: translateX(0px);
+  }
+  17% {
+    opacity: 1;
+    transform: translateX(0px);
+    /* width: 1000px; */
+  }
+  19% {
+    opacity: 0;
+    transform: translateX(-400px);
+  }
+  25% {
+    opacity: 0
+  }
+  100% {
+    opacity: 0
+  }
+}
+
+.home-text {
+  font-family: 'Dancing Script', cursive !important;
+}
